--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,44 @@
 h1{
     color: red;
 }
-.completed{
+
+/* .completed{
     text-decoration: line-through;
     color: gray;
-}
-.not{
+} */
+
+/* .not{
     text-decoration: underline;
+} */
+
+form {
+    margin-bottom: 25px;
+}
+
+
+
+/* TABLE */
+.entry-table {
+    text-align: left;
+}
+
+.entry-table tr {
+    padding: 10px 10px;
+}
+
+th, td {
+	border: 1px solid black;
+	padding: 8px;
+}
+
+thead th {
+  width: 25%;
+}
+
+thead {
+	background-color: #333;
+	color: white;
+	font-size: 0.875rem;
+	text-transform: uppercase;
+	letter-spacing: 2%;
 }
