--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Create Your VERY OWN Expense Tracker!</h1>
-    <a href="/login"> Login</a>
-    <a href="/signup"> Signup</a>
+    <h1>TRACK YOUR EXPENSES</h1>
+    <a href="/login"> Log In</a>
+    <a href="/signup"> Sign Up</a>
 </body>
 </html>
