--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,5 +10,6 @@
     <h1>Create Your VERY OWN Expense Tracker!</h1>
     <a href="/login"> Login</a>
     <a href="/signup"> Signup</a>
+    <a href="/entries">View Your Entries</a>
 </body>
 </html>
