added form validation

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -72,6 +72,14 @@ input, select, textarea {
 	appearance: none;
 }
 
+input:invalid {
+	box-shadow: 0 0 5px 1px red;
+  }
+  
+  input:focus:invalid {
+	box-shadow: none;
+  }
+
 /* Basic */
 
 	@-ms-viewport {
